k8s-deploy/staging_automarker/automarker-staging-Service.yaml

apiVersion: v1
kind: Service
metadata:
  name: automarker
  labels:
    app: automarker
spec:
  ports:
    - port: 80
      targetPort: 1337
  selector:
    app: automarker
  type: ClusterIP
