k8s-deploy/staging_automarker/automarker-staging-Ingress.yaml
# expose it externally, just for saturation testing

apiVersion: v1
kind: Service
metadata:
  name: automarker-external
  labels:
    app: automarker-external
#   namespace: default
spec:
  ports:
    - port: 1337
      #   protocol: TCP
      targetPort: 1337
  selector:
    app: automarker
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automarker-staging-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: automarker-staging-ip
    # networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: automarker-external
spec:
  defaultBackend:
    service:
      name: automarker-external
      port:
        number: 1337

# gcloud compute addresses create automarker-staging-ip --global --project umuzi-staging

# gcloud compute addresses describe automarker-staging-ip --global --project umuzi-staging
